# QT_OOP

./: Attacker.cpp  Attacker.h  CMakeLists.txt  Team.cpp  Team.h  VolleyPlayer.cpp  VolleyPlayer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pavwidget.cpp  pavwidget.h
